# simpleble_dut

./: Cargo.toml  README.rst  rust-toolchain.toml
.cargo/: config.toml
scripts/: flash_softdevice.sh
src/: ble.rs  itc.rs  main.rs
